--- a/ActionGame/Config/DefaultEngine.ini
+++ b/ActionGame/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Map/MainScene.MainScene
+EditorStartupMap=/Game/Map/MainScene.MainScene
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
